--- a/index.html
+++ b/index.html
@@ -29,11 +29,32 @@
         <p>1. Случайным образом</p>
         <p>2. Методом перетаскивания</p>
       </div>
+      <div class="ships-collection">
+        <p>Перетащите мышкой корабли на игровое поле. Для установки корабля по вертикали, кликните по нему правой кнопкой мышки.</p>
+      </div>
     </div>
     <!-- /instruction -->
   </div>
   <div class="information"></div>
 </div>
+<ul class="initial-ships" hidden>
+  <li>
+    <div id="fourdeck1" class="ship fourdeck"></div>
+    <div id="tripledeck1" class="ship tripledeck tripledeck1"></div>
+    <div id="tripledeck2" class="ship tripledeck tripledeck2"></div>
+  </li>
+  <li>
+    <div id="doubledeck1" class="ship doubledeck"></div>
+    <div id="doubledeck2" class="ship doubledeck doubledeck2"></div>
+    <div id="doubledeck3" class="ship doubledeck doubledeck3"></div>
+  </li>
+  <li>
+    <div id="singledeck1" class="ship singledeck"></div>
+    <div id="singledeck2" class="ship singledeck singledeck2"></div>
+    <div id="singledeck3" class="ship singledeck singledeck3"></div>
+    <div id="singledeck4" class="ship singledeck singledeck4"></div>
+  </li>
+</ul>
 <script src="script.js"></script>
 </body>
 </html>
